@@ -1,4 +1,9 @@
 2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/util.hxx:
+ - Made PQAlloc contain a std::shared_ptr, not derive from it.
+ - As per patch in #236; fixes Visual Studio build problems.
+ - Thanks Sam Kapilivsky.
+2011-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
  test/test_helpers.hxx:
  - New trick for accepting (and requiring) semicolon after PQXX_CHECK_THROWS.
  - Less idiomatic, but avoids Visual Studio warning.
